--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
     "styled-components": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
