--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "modern-normalize": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
+    "react-table-filter": "^2.0.2",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
-    "styled-components": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
