--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-table-filter": "^2.0.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
