--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
